--- a/19.05.:Templates#10/index.html
+++ b/19.05.:Templates#10/index.html
@@ -64,9 +64,96 @@
             <button class="request">ВАШ ЗАПРОС</button>
         </div>
         <div class="section4">
-            
+            <div class="info-1">
+                <h2>ЧЕМ МЫ ЗАНИМАЕМСЯ?</h2>
+                <div class="icons-1">
+                    <div class="service_item">
+                        <img src="./images/icon_building.svg" alt="">
+                        <p>СТРОИТЕЛЬСТВО
+                            ОФИСНЫХ ЗДАНИЙ</p>
+                    </div>
+                    <div class="service_item">
+                        <img src="./images/icon_building.svg" alt="">
+                        <p>СТРОИТЕЛЬСТВО
+                            ОФИСНЫХ ЗДАНИЙ</p>
+                    </div>
+                    <div class="service_item">
+                        <img src="./images/icon_building.svg" alt="">
+                        <p>СТРОИТЕЛЬСТВО
+                            ОФИСНЫХ ЗДАНИЙ</p>
+                    </div>
+                </div>
+            </div>
+            <div class="info-2">
+                <h2>ЧЕМ МЫ ЗАНИМАЕМСЯ?</h2>
+                <div class="icons-2">
+                    <div class="service_item">
+                        <img src="./images/icon_building.svg" alt="">
+                        <p>СТРОИТЕЛЬСТВО
+                            ОФИСНЫХ ЗДАНИЙ</p>
+                    </div>
+                    <div class="service_item">
+                        <img src="./images/icon_building.svg" alt="">
+                        <p>СТРОИТЕЛЬСТВО
+                            ОФИСНЫХ ЗДАНИЙ</p>
+                    </div>
+                    <div class="service_item">
+                        <img src="./images/icon_building.svg" alt="">
+                        <p>СТРОИТЕЛЬСТВО
+                            ОФИСНЫХ ЗДАНИЙ</p>
+                    </div>
+                    <div class="service_item">
+                        <img src="./images/icon_building.svg" alt="">
+                        <p>СТРОИТЕЛЬСТВО
+                            ОФИСНЫХ ЗДАНИЙ</p>
+                    </div>
+                    <div class="service_item">
+                        <img src="./images/icon_building.svg" alt="">
+                        <p>СТРОИТЕЛЬСТВО
+                            ОФИСНЫХ ЗДАНИЙ</p>
+                    </div>
+                    <div class="service_item">
+                        <img src="./images/icon_building.svg" alt="">
+                        <p>СТРОИТЕЛЬСТВО
+                            ОФИСНЫХ ЗДАНИЙ</p>
+                    </div>
+                </div>
+            </div>
+            <div class="info-contacts">
+                <h2>КОНТАКТЫ</h2>
+                <div class="contacts">
+                    <div class="adress">
+                        <img src="./images/icon_adress.svg" alt="">
+                        <h3>АДРЕС:</h3>
+                        <p>УЛИЦА МИРА 140,
+                            ОФИС 140-142</p>
+                    </div>
+                    <div class="phone">
+                        <img src="./images/icon_phone.svg" alt="">
+                        <h3>ТЕЛЕФОН:</h3>
+                        <p>8 (812) 111-22-33
+                            8 (812) 111-22-33</p>
+                    </div>
+                    <div class="time">
+                        <img src="./images/icon_time.svg" alt="">
+                        <h3>ВРЕМЯ РАБОТЫ:</h3>
+                        <p>ПН-СБ
+                            10:00 - 20:00</p>
+                    </div>
+                    <div class="e-mail">
+                        <img src="./images/icon_e-mail.svg" alt="">
+                        <h3>E-MAIL:</h3>
+                        <p>INFO@VIP.RU</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div></div>
+        <div class="footer">
+            <div class="footer-wrapper">
+                <p>© 2019 Строительная компания</p>
+                <p>Разработано лучшей студей</p>
+            </div>
+        </div>
     </div>
 
 </body>
